--- a/ProAcc/Views/InstanceCreation/_InstanceIndex.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceIndex.cshtml
@@ -45,13 +45,13 @@
 
     $(document).ready(function () {
         $("#tblInstanceCreation").dataTable({
-            "order": [[1, 'desc']],
-            "columnDefs": [
-                {
-                    "targets": [1],
-                    "visible": false
-                }
-            ]
+            //"order": [[1, 'desc']],
+            //"columnDefs": [
+            //    {
+            //        "targets": [1],
+            //        "visible": false
+            //    }
+            //]
         } );
     });
 
