--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -407,6 +407,11 @@
                                                             <i class="metismenu-icon"> </i>FioriApps Report
                                                         </a>
                                                     </li>
+                                                    <li>
+                                                        <a href="@Url.Action("AssessmentReport", "Report")">
+                                                            <i class="metismenu-icon"> </i>Assessment Report
+                                                        </a>
+                                                    </li>
                                                 </ul>
                                             </li>
                                         </ul>
