--- a/ProAcc/Views/Customers/Index.cshtml
+++ b/ProAcc/Views/Customers/Index.cshtml
@@ -46,7 +46,7 @@
                 <a class="txtG" value="@item.Cre_on">@item.Cre_on</a>
             </td>
             <td>
-                <a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("GetCustomerById","Customers", new { id = item.Customer_ID })"></a> &nbsp;&nbsp;
+                &nbsp;&nbsp;<a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("GetCustomerById","Customers", new { id = item.Customer_ID })"></a> &nbsp;&nbsp;
                 @*<a href="#" id="btnEdit" class="editCustomer fa fa-edit"></a><input type="hidden" value="@item.Customer_ID" /> |*@
                 <a href="#" class="btnDelete fa fa-trash"></a><input type="hidden" value="@item.Customer_ID" />
             </td>
