--- a/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
@@ -987,7 +987,7 @@
                                     }
                                 },
                                 cancel: function(){
-                                    $.alert('You clicked on <strong>cancel</strong>');
+                                    //$.alert('You clicked on <strong>cancel</strong>');
                                 },
                                 //moreButtons: {
                                 //    text: 'something else',
