--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -399,7 +399,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="@Url.Action("CustomReport", "Assessment")">
-                                                            <i class="metismenu-icon"> </i>Custom code Analysis
+                                                            <i class="metismenu-icon"> </i>Custom Code Analysis
                                                         </a>
                                                     </li>
                                                     <li>
@@ -546,13 +546,13 @@
                                             <li>
                                                 <a href="@Url.Action("ProfileLink", "Link")">
                                                     <i class="metismenu-icon pe-7s-diamond"></i>
-                                                    Add New User / Customers
+                                                    Add New User / Customer
                                                 </a>
                                             </li>
                                             <li>
                                                 <a href="@Url.Action("Index", "Customers")">
                                                     <i class="metismenu-icon pe-7s-diamond"></i>
-                                                    View Customers
+                                                    Customers List
                                                 </a>
                                             </li>
                                             <li>
